3.28/_sources/gui/index.rst.txt


gui
===================================

.. toctree::
   :maxdepth: 4
   :caption: gui:

   Buttons
   CadCapacities
   CharacterWidget
   Filters
   Flag
   Flags
   LayerType
   Qgis
   QgisInterface
   Qgs25DRendererWidget
   Qgs3DSymbolDialog
   Qgs3DSymbolWidget
   QgsAbstractDataSourceWidget
   QgsAbstractDbSourceSelect
   QgsAbstractFileContentSourceLineEdit
   QgsAbstractHistoryProvider
   QgsAbstractMapToolHandler
   QgsAbstractProcessingParameterWidgetWrapper
   QgsAbstractRelationEditorConfigWidget
   QgsAbstractRelationEditorWidget
   QgsAbstractRelationEditorWidgetFactory
   QgsActionMenu
   QgsActionWidgetWrapper
   QgsAdvancedDigitizingCanvasItem
   QgsAdvancedDigitizingDockWidget
   QgsAdvancedDigitizingFloater
   QgsAggregateMappingModel
   QgsAggregateMappingWidget
   QgsAggregateToolButton
   QgsAlignmentComboBox
   QgsAnimatedImageSourceLineEdit
   QgsAnimatedMarkerSymbolLayerWidget
   QgsAnnotationItemAbstractGuiMetadata
   QgsAnnotationItemBaseWidget
   QgsAnnotationItemCommonPropertiesWidget
   QgsAnnotationItemGuiGroup
   QgsAnnotationItemGuiRegistry
   QgsApplicationExitBlockerInterface
   QgsArrowSymbolLayerWidget
   QgsAttributeDialog
   QgsAttributeEditorContext
   QgsAttributeForm
   QgsAttributeFormEditorWidget
   QgsAttributeFormInterface
   QgsAttributeFormRelationEditorWidget
   QgsAttributeFormWidget
   QgsAttributeTableAction
   QgsAttributeTableDelegate
   QgsAttributeTableFilterModel
   QgsAttributeTableMapLayerAction
   QgsAttributeTableModel
   QgsAttributeTableView
   QgsAttributeTypeLoadDialog
   QgsAuthAuthoritiesEditor
   QgsAuthCertEditors
   QgsAuthCertInfo
   QgsAuthCertInfoDialog
   QgsAuthCertManager
   QgsAuthCertTrustPolicyComboBox
   QgsAuthConfigEditor
   QgsAuthConfigSelect
   QgsAuthConfigUriEdit
   QgsAuthEditorWidgets
   QgsAuthIdentitiesEditor
   QgsAuthImportCertDialog
   QgsAuthImportIdentityDialog
   QgsAuthMethodEdit
   QgsAuthMethodPlugins
   QgsAuthServersEditor
   QgsAuthSettingsWidget
   QgsAuthSslConfigDialog
   QgsAuthSslConfigWidget
   QgsAuthSslErrorsDialog
   QgsAuthSslImportDialog
   QgsAuthTrustedCAsDialog
   QgsBasicNumericFormatWidget
   QgsBearingNumericFormatDialog
   QgsBearingNumericFormatWidget
   QgsBlendModeComboBox
   QgsBlurWidget
   QgsBrowserDockWidget
   QgsBrowserGuiModel
   QgsBrowserTreeView
   QgsBrowserWidget
   QgsBrushStyleComboBox
   QgsBusyIndicatorDialog
   QgsCalloutWidget
   QgsCategorizedSymbolRendererWidget
   QgsCentroidFillSymbolLayerWidget
   QgsCharacterSelectorDialog
   QgsCheckableComboBox
   QgsCheckboxSearchWidgetWrapper
   QgsCodeEditor
   QgsCodeEditorCSS
   QgsCodeEditorColorScheme
   QgsCodeEditorColorSchemeRegistry
   QgsCodeEditorExpression
   QgsCodeEditorHTML
   QgsCodeEditorJavascript
   QgsCodeEditorJson
   QgsCodeEditorPython
   QgsCodeEditorSQL
   QgsCollapsibleGroupBox
   QgsCollapsibleGroupBoxBasic
   QgsColorBox
   QgsColorBrewerColorRampDialog
   QgsColorBrewerColorRampWidget
   QgsColorButton
   QgsColorDialog
   QgsColorEffectWidget
   QgsColorPreviewWidget
   QgsColorRampButton
   QgsColorRampLegendNodeDialog
   QgsColorRampLegendNodeWidget
   QgsColorRampShaderWidget
   QgsColorRampWidget
   QgsColorSchemeList
   QgsColorSchemeModel
   QgsColorSliderWidget
   QgsColorSwatchDelegate
   QgsColorSwatchGrid
   QgsColorSwatchGridAction
   QgsColorTextWidget
   QgsColorWheel
   QgsColorWidget
   QgsColorWidgetAction
   QgsCompoundColorWidget
   QgsConfigureShortcutsDialog
   QgsCoordinateBoundsPreviewMapWidget
   QgsCoordinateOperationWidget
   QgsCptCityColorRampDialog
   QgsCreateAnnotationItemMapToolHandler
   QgsCreateAnnotationItemMapToolInterface
   QgsCredentialDialog
   QgsCrsDefinitionWidget
   QgsCrsSelectionWidget
   QgsCurrencyNumericFormatWidget
   QgsCurveEditorWidget
   QgsCustomDropHandler
   QgsCustomLayerOrderWidget
   QgsCustomProjectOpenHandler
   QgsDashSpaceDialog
   QgsDashSpaceWidget
   QgsDataDefinedRotationDialog
   QgsDataDefinedSizeDialog
   QgsDataDefinedSizeLegendWidget
   QgsDataDefinedValueDialog
   QgsDataDefinedWidthDialog
   QgsDataItemGuiContext
   QgsDataItemGuiProvider
   QgsDataItemGuiProviderRegistry
   QgsDataSourceSelectDialog
   QgsDataSourceSelectWidget
   QgsDatabaseSchemaComboBox
   QgsDatabaseTableComboBox
   QgsDateEdit
   QgsDateTimeEdit
   QgsDateTimeSearchWidgetWrapper
   QgsDefaultSearchWidgetWrapper
   QgsDetailedItemData
   QgsDetailedItemDelegate
   QgsDetailedItemWidget
   QgsDevToolWidget
   QgsDevToolWidgetFactory
   QgsDial
   QgsDialog
   QgsDockWidget
   QgsDoubleSpinBox
   QgsDoubleValidator
   QgsDrawSourceWidget
   QgsDualView
   QgsEditConditionalFormatRuleWidget
   QgsEditorConfigWidget
   QgsEditorWidgetAutoConfPlugin
   QgsEditorWidgetFactory
   QgsEditorWidgetRegistry
   QgsEditorWidgetWrapper
   QgsEffectDrawModeComboBox
   QgsEffectStackCompactWidget
   QgsEffectStackPropertiesDialog
   QgsEffectStackPropertiesWidget
   QgsElevationProfileCanvas
   QgsEllipseSymbolLayerWidget
   QgsEmbeddedSymbolRendererWidget
   QgsEncodingFileDialog
   QgsEncodingSelectionDialog
   QgsErrorDialog
   QgsExpressionBuilderDialog
   QgsExpressionBuilderWidget
   QgsExpressionHighlighter
   QgsExpressionItem
   QgsExpressionItemSearchProxy
   QgsExpressionLineEdit
   QgsExpressionPreviewWidget
   QgsExpressionSelectionDialog
   QgsExpressionStoreDialog
   QgsExpressionTreeView
   QgsExtentGroupBox
   QgsExtentWidget
   QgsExternalResourceWidget
   QgsExternalStorageFileWidget
   QgsFeatureListComboBox
   QgsFeatureListModel
   QgsFeatureListView
   QgsFeatureListViewDelegate
   QgsFeatureModel
   QgsFeaturePickerWidget
   QgsFeatureSelectionDlg
   QgsFeatureSelectionModel
   QgsFieldCalculator
   QgsFieldComboBox
   QgsFieldConditionalFormatWidget
   QgsFieldDomainDialog
   QgsFieldDomainWidget
   QgsFieldExpressionWidget
   QgsFieldMappingModel
   QgsFieldMappingWidget
   QgsFieldValidator
   QgsFieldValuesLineEdit
   QgsFileDownloaderDialog
   QgsFileWidget
   QgsFilledMarkerSymbolLayerWidget
   QgsFilterLineEdit
   QgsFindFilesByPatternDialog
   QgsFindFilesByPatternWidget
   QgsFloatingWidget
   QgsFocusWatcher
   QgsFontButton
   QgsFontMarkerSymbolLayerWidget
   QgsFormAnnotation
   QgsFractionNumericFormatWidget
   QgsGeocoderLocatorFilter
   QgsGeographicCoordinateNumericFormatDialog
   QgsGeographicCoordinateNumericFormatWidget
   QgsGeometryGeneratorSymbolLayerWidget
   QgsGeometryRubberBand
   QgsGlowWidget
   QgsGradientColorRampDialog
   QgsGradientFillSymbolLayerWidget
   QgsGradientStopEditor
   QgsGraduatedHistogramWidget
   QgsGraduatedSymbolRendererWidget
   QgsGroupBoxCollapseButton
   QgsGroupWmsDataDialog
   QgsGui
   QgsHashedLineSymbolLayerWidget
   QgsHeatmapRendererWidget
   QgsHelp
   QgsHighlight
   QgsHighlightableLineEdit
   QgsHillshadeRendererWidget
   QgsHistogramWidget
   QgsHistoryEntry
   QgsHistoryProviderRegistry
   QgsHtmlWidgetWrapper
   QgsHttpHeaderWidget
   QgsIFeatureSelectionManager
   QgsIdentifyMenu
   QgsImageSourceLineEdit
   QgsInterpolatedLineSymbolLayerWidget
   QgsInvertedPolygonRendererWidget
   QgsJsonEditWidget
   QgsKeyValueWidget
   QgsLUDialog
   QgsLabelLineAnchorWidget
   QgsLabelObstacleSettingsWidget
   QgsLabelSettingsWidgetBase
   QgsLabelSettingsWidgetDialog
   QgsLayerMetadataResultsModel
   QgsLayerMetadataResultsProxyModel
   QgsLayerMetadataSearchWidget
   QgsLayerPropertiesWidget
   QgsLayerTreeEmbeddedConfigWidget
   QgsLayerTreeEmbeddedWidgetProvider
   QgsLayerTreeEmbeddedWidgetRegistry
   QgsLayerTreeMapCanvasBridge
   QgsLayerTreeProxyModel
   QgsLayerTreeView
   QgsLayerTreeViewDefaultActions
   QgsLayerTreeViewIndicator
   QgsLayerTreeViewMenuProvider
   QgsLayoutComboBox
   QgsLayoutConfigObject
   QgsLayoutCustomDropHandler
   QgsLayoutDesignerInterface
   QgsLayoutItemAbstractGuiMetadata
   QgsLayoutItemBaseWidget
   QgsLayoutItemComboBox
   QgsLayoutItemGuiGroup
   QgsLayoutItemGuiRegistry
   QgsLayoutItemPropertiesDialog
   QgsLayoutItemPropertiesWidget
   QgsLayoutRuler
   QgsLayoutUnitsComboBox
   QgsLayoutView
   QgsLayoutViewEllipticalRubberBand
   QgsLayoutViewMenuProvider
   QgsLayoutViewMouseEvent
   QgsLayoutViewRectangularRubberBand
   QgsLayoutViewRubberBand
   QgsLayoutViewTool
   QgsLayoutViewToolAddItem
   QgsLayoutViewToolAddNodeItem
   QgsLayoutViewToolEditNodes
   QgsLayoutViewToolMoveItemContent
   QgsLayoutViewToolPan
   QgsLayoutViewToolSelect
   QgsLayoutViewToolTemporaryKeyPan
   QgsLayoutViewToolTemporaryKeyZoom
   QgsLayoutViewToolTemporaryMousePan
   QgsLayoutViewToolZoom
   QgsLayoutViewTriangleRubberBand
   QgsLegendFilterButton
   QgsLegendPatchShapeButton
   QgsLegendPatchShapeDialog
   QgsLegendPatchShapeWidget
   QgsLimitedRandomColorRampDialog
   QgsLimitedRandomColorRampWidget
   QgsLinePatternFillSymbolLayerWidget
   QgsLineburstSymbolLayerWidget
   QgsListWidget
   QgsLocatorWidget
   QgsLongLongValidator
   QgsManageConnectionsDialog
   QgsMapCanvas
   QgsMapCanvasAnnotationItem
   QgsMapCanvasInteractionBlocker
   QgsMapCanvasItem
   QgsMapCanvasSnappingUtils
   QgsMapCanvasTracer
   QgsMapCanvasUtils
   QgsMapLayerAction
   QgsMapLayerActionRegistry
   QgsMapLayerComboBox
   QgsMapLayerConfigWidget
   QgsMapLayerConfigWidgetContext
   QgsMapLayerConfigWidgetFactory
   QgsMapLayerStyleManagerWidget
   QgsMapMouseEvent
   QgsMapOverviewCanvas
   QgsMapTip
   QgsMapTool
   QgsMapToolAdvancedDigitizing
   QgsMapToolCapture
   QgsMapToolCaptureLayerGeometry
   QgsMapToolDigitizeFeature
   QgsMapToolEdit
   QgsMapToolEmitPoint
   QgsMapToolExtent
   QgsMapToolIdentify
   QgsMapToolIdentifyFeature
   QgsMapToolPan
   QgsMapToolZoom
   QgsMapUnitScaleDialog
   QgsMapUnitScaleWidget
   QgsMarkerLineSymbolLayerWidget
   QgsMaskMarkerSymbolLayerWidget
   QgsMenuHeader
   QgsMenuHeaderWidgetAction
   QgsMergedFeatureRendererWidget
   QgsMeshLayerProperties
   QgsMessageBar
   QgsMessageBarItem
   QgsMessageLogViewer
   QgsMessageViewer
   QgsMetadataWidget
   QgsModelArrowItem
   QgsModelChildAlgorithmGraphicItem
   QgsModelChildDependenciesWidget
   QgsModelCommentGraphicItem
   QgsModelComponentGraphicItem
   QgsModelDesignerDialog
   QgsModelDesignerFlatButtonGraphicItem
   QgsModelDesignerFoldButtonGraphicItem
   QgsModelGraphicsScene
   QgsModelGraphicsView
   QgsModelGroupBoxGraphicItem
   QgsModelOutputGraphicItem
   QgsModelParameterGraphicItem
   QgsModelViewSnapMarker
   QgsMultiBandColorRendererWidget
   QgsMultiEditToolButton
   QgsNewAuxiliaryFieldDialog
   QgsNewAuxiliaryLayerDialog
   QgsNewDatabaseTableNameDialog
   QgsNewDatabaseTableNameWidget
   QgsNewGeoPackageLayerDialog
   QgsNewHttpConnection
   QgsNewMemoryLayerDialog
   QgsNewNameDialog
   QgsNewVectorLayerDialog
   QgsNewVectorTableDialog
   QgsNullSymbolRendererWidget
   QgsNumericFormatConfigurationWidgetFactory
   QgsNumericFormatGuiRegistry
   QgsNumericFormatSelectorWidget
   QgsNumericFormatWidget
   QgsOWSSourceSelect
   QgsOpacityWidget
   QgsOptionsDialogBase
   QgsOptionsDialogHighlightButton
   QgsOptionsDialogHighlightCheckBox
   QgsOptionsDialogHighlightGroupBox
   QgsOptionsDialogHighlightLabel
   QgsOptionsDialogHighlightTable
   QgsOptionsDialogHighlightTree
   QgsOptionsDialogHighlightWidget
   QgsOptionsPageWidget
   QgsOptionsWidgetFactory
   QgsOrderByDialog
   QgsOrganizeTableColumnsDialog
   QgsPaintEffectPropertiesWidget
   QgsPaintEffectWidget
   QgsPalettedRendererWidget
   QgsPanelWidget
   QgsPanelWidgetStack
   QgsPanelWidgetWrapper
   QgsPasswordLineEdit
   QgsPenCapStyleComboBox
   QgsPenJoinStyleComboBox
   QgsPenStyleComboBox
   QgsPercentageNumericFormatWidget
   QgsPictureSourceLineEditBase
   QgsPixmapLabel
   QgsPlotCanvas
   QgsPlotCanvasItem
   QgsPlotMouseEvent
   QgsPlotRectangularRubberBand
   QgsPlotRubberBand
   QgsPlotTool
   QgsPlotToolPan
   QgsPlotToolTemporaryKeyPan
   QgsPlotToolTemporaryKeyZoom
   QgsPlotToolTemporaryMousePan
   QgsPlotToolZoom
   QgsPluginManagerInterface
   QgsPointCloudAttributeComboBox
   QgsPointCloudQueryBuilder
   QgsPointCloudRendererPropertiesWidget
   QgsPointCloudRendererWidget
   QgsPointClusterRendererWidget
   QgsPointDisplacementRendererWidget
   QgsPointPatternFillSymbolLayerWidget
   QgsPresetColorRampDialog
   QgsPresetColorRampWidget
   QgsPreviewEffect
   QgsProcessingAbstractParameterDefinitionWidget
   QgsProcessingAlgorithmConfigurationWidget
   QgsProcessingAlgorithmConfigurationWidgetFactory
   QgsProcessingAlgorithmDialogBase
   QgsProcessingBatchAlgorithmDialogBase
   QgsProcessingContextGenerator
   QgsProcessingGui
   QgsProcessingGuiRegistry
   QgsProcessingHiddenWidgetWrapper
   QgsProcessingHistoryProvider
   QgsProcessingLayerOutputDestinationWidget
   QgsProcessingMapLayerComboBox
   QgsProcessingModelerParameterWidget
   QgsProcessingMultipleInputDialog
   QgsProcessingMultipleInputPanelWidget
   QgsProcessingMultipleSelectionDialog
   QgsProcessingMultipleSelectionPanelWidget
   QgsProcessingParameterDefinitionDialog
   QgsProcessingParameterDefinitionWidget
   QgsProcessingParameterWidgetContext
   QgsProcessingParameterWidgetFactoryInterface
   QgsProcessingParametersGenerator
   QgsProcessingParametersWidget
   QgsProcessingRecentAlgorithmLog
   QgsProcessingToolboxModel
   QgsProcessingToolboxModelAlgorithmNode
   QgsProcessingToolboxModelGroupNode
   QgsProcessingToolboxModelNode
   QgsProcessingToolboxModelProviderNode
   QgsProcessingToolboxModelRecentNode
   QgsProcessingToolboxProxyModel
   QgsProcessingToolboxTreeView
   QgsProjectStorageGuiProvider
   QgsProjectStorageGuiRegistry
   QgsProjectionSelectionDialog
   QgsProjectionSelectionTreeWidget
   QgsProjectionSelectionWidget
   QgsPropertyAssistantWidget
   QgsPropertyOverrideButton
   QgsProviderConnectionComboBox
   QgsProviderGuiMetadata
   QgsProviderGuiRegistry
   QgsProviderSourceWidget
   QgsProviderSourceWidgetProvider
   QgsProviderSourceWidgetProviderRegistry
   QgsProxyStyle
   QgsQmlWidgetWrapper
   QgsQueryBuilder
   QgsQueryResultWidget
   QgsRandomMarkerFillSymbolLayerWidget
   QgsRangeSlider
   QgsRasterBandComboBox
   QgsRasterContourRendererWidget
   QgsRasterFillSymbolLayerWidget
   QgsRasterFormatSaveOptionsWidget
   QgsRasterHistogramWidget
   QgsRasterLayerProperties
   QgsRasterLayerSaveAsDialog
   QgsRasterLayerTemporalPropertiesWidget
   QgsRasterLineSymbolLayerWidget
   QgsRasterMarkerSymbolLayerWidget
   QgsRasterMinMaxWidget
   QgsRasterPyramidsOptionsWidget
   QgsRasterRendererWidget
   QgsRasterTransparencyWidget
   QgsRatioLockButton
   QgsRelationAggregateSearchWidgetWrapper
   QgsRelationEditorConfigWidget
   QgsRelationEditorWidget
   QgsRelationReferenceSearchWidgetWrapper
   QgsRelationReferenceWidget
   QgsRelationReferenceWidgetWrapper
   QgsRelationWidgetRegistry
   QgsRelationWidgetWrapper
   QgsRendererPropertiesDialog
   QgsRendererRasterPropertiesWidget
   QgsRendererRulePropsDialog
   QgsRendererRulePropsWidget
   QgsRendererWidget
   QgsRichTextEditor
   QgsRubberBand
   QgsRuleBasedRendererModel
   QgsRuleBasedRendererWidget
   QgsSVGFillSymbolLayerWidget
   QgsScaleComboBox
   QgsScaleRangeWidget
   QgsScaleVisibilityDialog
   QgsScaleWidget
   QgsScientificNumericFormatWidget
   QgsScreenHelper
   QgsScrollArea
   QgsSearchQueryBuilder
   QgsSearchWidgetToolButton
   QgsSearchWidgetWrapper
   QgsSettingsRegistryGui
   QgsShadowEffectWidget
   QgsShapeburstFillSymbolLayerWidget
   QgsShortcutsManager
   QgsSimpleFillSymbolLayerWidget
   QgsSimpleLineSymbolLayerWidget
   QgsSimpleMarkerSymbolLayerWidget
   QgsSingleBandGrayRendererWidget
   QgsSingleBandPseudoColorRendererWidget
   QgsSingleSymbolRendererWidget
   QgsSlider
   QgsSmartGroupCondition
   QgsSmartGroupEditorDialog
   QgsSnapIndicator
   QgsSnapToGridCanvasItem
   QgsSourceSelectProvider
   QgsSourceSelectProviderRegistry
   QgsSpinBox
   QgsStatusBar
   QgsStyleExportImportDialog
   QgsStyleGroupSelectionDialog
   QgsStyleItemsListWidget
   QgsStyleManagerDialog
   QgsStyleSaveDialog
   QgsSublayersDialog
   QgsSubsetStringEditorInterface
   QgsSubsetStringEditorProvider
   QgsSubsetStringEditorProviderRegistry
   QgsSubstitutionListDialog
   QgsSubstitutionListWidget
   QgsSvgMarkerSymbolLayerWidget
   QgsSvgSelectorDialog
   QgsSvgSelectorFilterModel
   QgsSvgSelectorGroupsModel
   QgsSvgSelectorListModel
   QgsSvgSelectorWidget
   QgsSvgSourceLineEdit
   QgsSymbolAnimationSettingsDialog
   QgsSymbolAnimationSettingsWidget
   QgsSymbolButton
   QgsSymbolLayerWidget
   QgsSymbolLevelsDialog
   QgsSymbolLevelsWidget
   QgsSymbolSelectorDialog
   QgsSymbolSelectorWidget
   QgsSymbolWidgetContext
   QgsSymbolsListWidget
   QgsTabWidget
   QgsTableEditorDialog
   QgsTableEditorWidget
   QgsTableView
   QgsTableWidgetBase
   QgsTableWidgetItem
   QgsTaskManagerWidget
   QgsTemporalControllerWidget
   QgsTextFormatDialog
   QgsTextFormatPanelWidget
   QgsTextFormatWidget
   QgsTextPreview
   QgsTimeEdit
   QgsTransformWidget
   QgsTreeWidgetItem
   QgsTreeWidgetItemObject
   QgsUnitSelectionWidget
   QgsUserInputWidget
   QgsVScrollArea
   QgsValidityCheckResultsModel
   QgsValidityCheckResultsWidget
   QgsValueMapSearchWidgetWrapper
   QgsValueRelationSearchWidgetWrapper
   QgsVariableEditorWidget
   QgsVectorFieldSymbolLayerWidget
   QgsVectorLayerProperties
   QgsVectorLayerTemporalPropertiesWidget
   QgsVectorTileLayerProperties
   QgsVertexMarker
   QgsWidgetWrapper
   QgsWindowManagerInterface
   QtCore
   Targets
